--- a/templates/base.html
+++ b/templates/base.html
@@ -1,112 +1,137 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="/site_media/css/bootstrap.css" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="/site_media/css/general-v2.css">
-    <link rel="stylesheet" type="text/css" href="/site_media/css/github.css">
+    <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap-responsive.css"/>
+    <link rel="stylesheet" href="/site_media/css/general-v2.css"/>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-dropdown.js"></script>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-modal.js"></script>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-tab.js"></script>
+
     <script type="text/javascript" src="/site_media/javascript/jquery.js"></script>
-    <script type="text/javascript" src="/site_media/javascript/bootstrap-dropdown.js"></script>
+
     {% block external %}{% endblock %}
 </head>
 <body>
-    <div class="navbar ">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="brand" href="/">
-                    Cyber Library
-                </a>
-                <ul class="nav">
-                    {% if user.is_authenticated %}
-                        <li><a href="/user/{{ user.username }}/" class="active">Home</a></li>
-                        <li><a href="/library" class="active">Library</a></li>
-                    {% else %}
-                        <li><a href="/" class="active">Home</a></li>
-                        <li><a href="/">Library</a></li>
-                    {% endif %}
-                    <li><a href="/services">Forum</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                </ul>
-                <form class="navbar-search pull-left">
-                    <input type="text" class="search-query" placeholder="Search">
-                </form>
-                <div class="nav pull-right">
-                    <ul class="nav pills">
-                        <li><a href="#">Regular link</a></li>
-                        <li class="dropdown" id="menu1">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
-                                Account
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                {% if user.is_authenticated %}
-                                    <li><a href="/logout/">Logout</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="/user/{{ user.username }}/profile">Setting</a></li>
-                                {% else %}
-                                    <li><a href="/">Login</a></li>
-                                    <li><a href="/register/">Register</a></li>
-                                {% endif %}
 
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
-                        {% if user.is_authenticated %}
-                            <li>
-                                <div id="userbox">
-                                    <div id="user">
-                                        <a href="/user/{{ user.username }}/"><img height="20" src="https://secure.gravatar.com/avatar/7df2dd149dfd65e036773d51b1978f69?s=140&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="20"></a>
-                                        <a href="/user/{{ user.username }}/"  class="name"><h7-color>{{ user.username }}</h7-color></a>
-                                    </div>
-                                    <ul id="user-links">
-                                        <li>
-                                            <a href="/user/{{ user.username }}/notifications/" id="notifications" class="tooltipped downwards" original-title="Notifications">
-                                                <span class="mini-icon notifications"></span>
-                                                <span class="unread_count">2</span>
-                                            </a>
-                                        </li>
+<div class="navbar ">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="brand" href="/">
+                Cyber Library
+            </a>
 
+            <ul class="nav">
+                {# Links #}
+                {% if user.is_authenticated %}
+                    <li><a href="/user/{{ user.username }}/" class="active">Home</a></li>
+                    <li><a href="/library" class="active">Library</a></li>
+                {% else %}
+                    <li><a href="/" class="active">Home</a></li>
+                    <li><a href="/">Library</a></li>
+                {% endif %}
+                <li><a href="/forum/">Forum</a></li>
+                <li><a href="/contact">Contact</a></li>
+            </ul>
+
+            {# Search form #}
+            <form class="navbar-search pull-left">
+                <input type="text" class="search-query" placeholder="Search">
+            </form>
+            <div class="nav pull-right">
+                <ul class="nav pills">
+                    <li class="dropdown" id="menu1">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+                            Account
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            {% if user.is_authenticated %}
+                                <li><a href="/logout/">Logout</a></li>
+                                <li><a href="#">About</a></li>
+
+                                <li class="dropdown" id="submenu">
+                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#submenu">
+                                        Setting
+                                        <b class="caret"></b>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="/user/{{ user.username }}/password_change">Change password</a></li>
+                                        <li><a href="/user/{{ user.username }}/profile">Change information</a></li>
+                                        <li><a href="/images">Change profile image </a></li>
+                                        <li><a href="/images">Others</a></li>
+
+                                        <li class="divider"></li>
+                                        <li><a href="#">Separated link</a></li>
                                     </ul>
-                                </div>
+                                </li>
 
-                            </li>
-                        {% endif %}
+                            {% else %}
+                                <li><a href="/">Login</a></li>
+                                <li><a href="/register/">Register</a></li>
+                            {% endif %}
+
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <div id="userbox">
+                                <div id="user">
+                                    <a href="/user/{{ user.username }}/"><img height="20" src="https://secure.gravatar.com/avatar/7df2dd149dfd65e036773d51b1978f69?s=140&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="20"></a>
+                                    <a href="/user/{{ user.username }}/"  class="name"><h7-color>{{ user.username }}</h7-color></a>
+                                </div>
+                                <ul id="user-links">
+                                    <li>
+                                        <a href="/user/{{ user.username }}/notifications/" id="notifications" class="tooltipped downwards" original-title="Notifications">
+                                            <span class="mini-icon notifications"></span>
+                                            <span class="unread_count">2</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                            </div>
+
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% block head %}{% endblock %}
+{% block content %}{% endblock %}
+<div class="well">
+    <div id="footer">
+        <div id="fixed-width">
+            <div id="footer_links">
+                <div id="footer_links">
+                    <ul>
+                        <li class="first"><a href="#">Copyright Statement</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Site
+                            Help</a></li>
+                        <li class="last"><a href="#">Site Index</a></li>
                     </ul>
                 </div>
+                <div id="footer-copyright">© 1997–2012 Glory Library Association</div>
+            </div>
+            <div class="contact">
+                <h2><img src="/site_media/img/user_images/edmodo-logo.png"
+                         alt="American Library Association" width="192" height="13"></h2>
+
+                <p>144 Xuan Thuy St., Cau giay district, Ha Noi, VN |
+                    <span class="skype_pnh_print_container_1332123927">1.800.545.2433</span><span
+                            class="skype_pnh_container" dir="ltr" tabindex="-1"><span class="skype_pnh_mark"></span></span>
+                </p>
             </div>
         </div>
     </div>
-
-    {% block head %}{% endblock %}
-    {% block content %}{% endblock %}
-    <div class="well">
-        <div id="footer">
-            <div id="fixed-width">
-                <div id="footer_links">
-                    <div id="footer_links">
-                        <ul>
-                            <li class="first"><a href="#">Copyright Statement</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Site
-                                Help</a></li>
-                            <li class="last"><a href="#">Site Index</a></li>
-                        </ul>
-                    </div>
-                    <div id="footer-copyright">© 1997–2012 Glory Library Association</div>
-                </div>
-                <div class="contact">
-                    <h2><img src="/site_media/img/user_images/edmodo-logo.png"
-                             alt="American Library Association" width="192" height="13"></h2>
-
-                    <p>144 Xuan Thuy St., Cau giay district, Ha Noi, VN |
-                        <span class="skype_pnh_print_container_1332123927">1.800.545.2433</span><span
-                                class="skype_pnh_container" dir="ltr" tabindex="-1"><span class="skype_pnh_mark"></span></span>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
+</div>
 </body>
 </html>
