--- a/templates/Upload/image_link_upload_page.html
+++ b/templates/Upload/image_link_upload_page.html
@@ -1,5 +1,6 @@
 {% extends "User/base_user_page.html" %}
-{% block title %}{{ user.username }}|Image Upload{% endblock %}
+{% block title %}{{ user.username }}|Image Link Upload{% endblock %}
+{% block external %}{% endblock %}
 {% block base_user_content%}
     <h1> Image Link Upload</h1>
     <h4>{{ status }}</h4>
