--- a/templates/Book/books_page.html
+++ b/templates/Book/books_page.html
@@ -1,23 +1,28 @@
 {% extends 'base.html' %}
 {% block title %}{{ category.name }}{% endblock %}
 {% block content %}
-    {% if not book.public_share %}
-        You can't view this book because it's private
-    {% else %}
-        <h1>{{ book.title }}</h1>
+    {% for book in books.object_list %}
+    <div class="media_object_list">
+        <h2><a href="/book/{{ book.id }}">{{ book.title }}</a></h2>
+        <a href="/book/{{ book.id }}">book icon</a>
+        <table>
+            <tr>
+                <th valign="top" style="padding: 8px 5px 5px 5px">
 
-        Shared by:{{ book.uploader }}
-        Uploaded date:{{ book.upload_date.now }}
-        {% if book.file %}Size: {{ book.file.size|filesizeformat }}
-        {% else %}Size: 0
-        {% endif %}
-        Readers:{{ book.read_count }}
-        Like:{{ book.vote_set.count }}
-        <br/>
-        {% if not is_voted %}
-             <a href="/vote?id={{ book.id }}"><input type="button" value="Like"/></a>
-            
-        {% endif %}
-    {% endif %}
-
+                </th>
+                <td valign="top" style="padding: 2px 5px 5px 5px">
+                    <h3>
+                        Shared by: <a href="/user/{{ book.uploader }}/" >{{ book.uploader }}</a><br/>
+                        Uploaded date: {{ book.uploaded_date }}<br/>
+                        {% if Book.public_share %}
+                            Sharing: Public
+                        {% else %}
+                            Sharing: Private
+                        {% endif %}
+                    </h3>
+                </td>
+            </tr>
+        </table>
+    </div>
+    {% endfor %}
 {% endblock %}
