--- a/templates/Image/images_page.html
+++ b/templates/Image/images_page.html
@@ -1,9 +1,31 @@
 {% extends "base.html" %}
 {% block title %}Images{% endblock %}
 {% block content %}
-    {% for image in images %}
-		<h1> {{ image.description }}</h1>
-		<a href="{{ image.url }}"> <img src="{{ image.url }}" height="100" width="130" /></a>
-		<h3> Shared by: <a href="/user/{{ image.uploader }}/" >{{ image.uploader }}</a> / Uploaded date: {{ image.upload_date }}</h3>
+    {% for image in images.object_list %}
+        <div class="media_object_list">
+            <h2><a href="/image/{{ image.id }}">{{ image.title }}</a></h2>
+            <table border="1px black solid">
+                <tr>
+                    <th valign="top" style="padding: 8px 5px 5px 5px">
+                        {% if image.image_file %}
+                            <a href="/image/{{ image.id }}"> <img src="{{ image.image_file.url }}" width="100" alt="{{ image.image_file.url }}"/></a>
+                        {% else %}
+                            <a href="/image/{{ image.id }}"> <img src="{{ image.url }}" width="100" alt="{{ image.url }}"/></a>
+                        {% endif %}
+                    </th>
+                    <td valign="top" style="padding: 2px 5px 5px 5px">
+                        <h3>
+                            Shared by: <a href="/user/{{ image.uploader }}/" >{{ image.uploader }}</a><br/>
+                            Uploaded date: {{ image.upload_date }}<br/>
+                            {% if image.public_share %}
+                                Sharing: Public
+                            {% else %}
+                                Sharing: Private
+                            {% endif %}
+                        </h3>
+                    </td>
+                </tr>
+            </table>
+        </div>
     {% endfor %}
 {% endblock %}
