--- a/templates/Upload/book_upload_page.html
+++ b/templates/Upload/book_upload_page.html
@@ -1,5 +1,5 @@
 {% extends "User/base_user_page.html" %}
-{% block title %}{{ user.username }}|Image Upload{% endblock %}
+{% block title %}{{ user.username }}|Book Upload{% endblock %}
 {% block base_user_content%}
     <h1>Book Upload</h1>
     <h4>{{ status }}</h4>
