--- a/templates/User/user_password_change_page.html
+++ b/templates/User/user_password_change_page.html
@@ -1,12 +1,14 @@
 {% extends "User/base_user_page.html" %}
+{% block external %}{% endblock %}
 {% block title %}{{ user.username }}|Change Password{% endblock %}
 {% block base_user_content %}
-<form method="post" action=".">
-    <table>
-        {% csrf_token %}
-        {{ password_change_form.as_table }}
-    </table>
-    <input type="submit" value="Change">
-</form>
-{{ status }}
+    <h2>Password Change</h2>
+    <form method="post" action=".">
+        <table>
+            {% csrf_token %}
+            {{ password_change_form.as_table }}
+        </table>
+        <input type="submit" value="Change">
+    </form>
+    <h3>{{ status }}</h3>
 {% endblock %}
