--- a/templates/base.html
+++ b/templates/base.html
@@ -3,122 +3,94 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap-responsive.css"/>
-    <link rel="stylesheet" href="/site_media/css/general-v2.css"/>
+
+    <link rel="stylesheet" type='text/css' href="/site_media/bootstrap/css/bootstrap.css"/>
     <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap.js"></script>
+    <link rel="stylesheet" type='text/css' href="/site_media/bootstrap/css/bootstrap-responsive.css"/>
+    <link rel="stylesheet" href="/site_media/css/general-v2.css"/>
+
+    <script type="text/javascript" src="/site_media/javascript/jquery.js"></script>
     <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-dropdown.js"></script>
     <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-modal.js"></script>
     <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-tab.js"></script>
-
-    <script type="text/javascript" src="/site_media/javascript/jquery.js"></script>
-
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-tooltip.js"></script>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-button.js"></script>
+    <script type="text/javascript" src="/site_media/bootstrap/js/bootstrap-collapse.js"></script>
     {% block external %}{% endblock %}
+
 </head>
 <body>
 
-<div class="navbar ">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="/">
-                Cyber Library
-            </a>
-
-            <ul class="nav">
-                {# Links #}
-                {% if user.is_authenticated %}
-                    <li><a href="/user/{{ user.username }}/" class="active">Home</a></li>
-                    <li><a href="/library" class="active">Library</a></li>
-                {% else %}
-                    <li><a href="/" class="active">Home</a></li>
-                    <li><a href="/">Library</a></li>
-                {% endif %}
-                <li><a href="/forum/">Forum</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
-
-            {# Search form #}
-            <form class="navbar-search pull-left">
-                <input type="text" class="search-query" placeholder="Search">
-            </form>
-            <div class="nav pull-right">
-                <ul class="nav pills">
-                    <li class="dropdown" id="menu1">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
-                            Account
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            {% if user.is_authenticated %}
-                                <li><a href="/logout/">Logout</a></li>
-                                <li><a href="#">About</a></li>
-
-                                <li class="dropdown" id="submenu">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#submenu">
-                                        Setting
-                                        <b class="caret"></b>
-                                    </a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="/user/{{ user.username }}/password_change">Change password</a></li>
-                                        <li><a href="/user/{{ user.username }}/profile">Change information</a></li>
-                                        <li><a href="/images">Change profile image </a></li>
-                                        <li><a href="/images">Others</a></li>
-
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a></li>
-                                    </ul>
-                                </li>
-
-                            {% else %}
-                                <li><a href="/">Login</a></li>
-                                <li><a href="/register/">Register</a></li>
-                            {% endif %}
-
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
-                    {% if user.is_authenticated %}
-                        <li>
-                            <div id="userbox">
-                                <div id="user">
-                                    <a href="/user/{{ user.username }}/"><img height="20" src="https://secure.gravatar.com/avatar/7df2dd149dfd65e036773d51b1978f69?s=140&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="20"></a>
-                                    <a href="/user/{{ user.username }}/"  class="name"><h7-color>{{ user.username }}</h7-color></a>
-                                </div>
-                                <ul id="user-links">
-                                    <li>
-                                        <a href="/user/{{ user.username }}/notifications/" id="notifications" class="tooltipped downwards" original-title="Notifications">
-                                            <span class="mini-icon notifications"></span>
-                                            <span class="unread_count">2</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                            </div>
-
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container">
+                <a data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a href="" class="brand" >Cyber Library</a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li><a href="/">Home</a></li>
+                        <li class="dropdown">
+                            <a data-toggle="dropdown" class="dropdown-toggle" href="#">Library <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/books">Books</a></li>
+                                <li><a href="/images">Images</a></li>
+                                <li><a href="/videos">Videos</a></li>
+                            </ul>
                         </li>
-                    {% endif %}
-                </ul>
+                        <li><a href="/forum">Forum</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                    <form action="" class="navbar-search pull-left">
+                        <input type="text" placeholder="Search" class="search-query span3">
+                    </form>
+                    <ul class="nav pull-right">
+                        {% if user.is_authenticated %}
+                            <li>
+                                <a href="/user/{{ user.username }}" style="color:#adff2f;"><b>{{ user.username }}</b></a>
+                            </li>
+                            <li class="divider-vertical"></li>
+                            <li class="dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle" href="">Account<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/user/{{ user.username }}/friend_requests">Friend Requests</a></li>
+                                    <li><a href="/user/{{ user.username }}/notifications">Notifications</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="/accounts/logout">Logout</a></li>
+                                </ul>
+                            </li>
+                            <li class="divider-vertical"></li>
+                            <li class="dropdown">
+                                <a data-toggle="dropdown" class="dropdown-toggle" href=""><img class="icon-cog icon-white"/>Setting<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/user/{{ user.username }}/profile">Change Profile</a></li>
+                                    <li><a href="/user/{{ user.username }}/password_change">Change Password</a></li>
+                                    <li><a href="/user/{{ user.username }}/profile_image_change">Change Avatar</a></li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <li><a href="/accounts/login">Login</a></li>
+                        {% endif %}
+                    </ul>
+                </div><!-- /.nav-collapse -->
             </div>
-        </div>
+        </div><!-- /navbar-inner -->
     </div>
-</div>
-
-{% block head %}{% endblock %}
 {% block content %}{% endblock %}
 <div class="well">
     <div id="footer">
         <div id="fixed-width">
             <div id="footer_links">
-                <div id="footer_links">
-                    <ul>
-                        <li class="first"><a href="#">Copyright Statement</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Site
-                            Help</a></li>
-                        <li class="last"><a href="#">Site Index</a></li>
-                    </ul>
-                </div>
+                <ul>
+                    <li class="first"><a href="#">Copyright Statement</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Site
+                        Help</a></li>
+                    <li class="last"><a href="#">Site Index</a></li>
+                </ul>
                 <div id="footer-copyright">© 1997–2012 Glory Library Association</div>
             </div>
             <div class="contact">
